--- a/config.json
+++ b/config.json
@@ -4,6 +4,6 @@
     "host": "0.0.0.0",
     "port": 53,
     "upper_dns": "8.8.8.8",
-    "blacklist": ["dou.ua","ukr.net"],
+    "blacklist": ["dou.uaa","ukr.net"],
     "answer": "Not Resolved"
 }
